[package]
name = "watchr"
description = "who watches the watchers?"
homepage = "https://amanjeev.com"
repository = "https://github.com/amanjeev/watchr"
version = "0.1.0"
edition = "2021"
authors = ["Amanjeev Sethi <aj@amanjeev.com>"]
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-rc.7", features = ["derive"] }