[package]
name = "watchr"
description = "Execute a command periodically. Like watch(1) command."
homepage = "https://amanjeev.com"
repository = "https://github.com/amanjeev/watchr"
version = "0.1.0"
edition = "2021"
authors = ["Amanjeev Sethi <aj@amanjeev.com>"]
license-file = "LICENSE"
readme = "README.md"

[[bin]]
name = "wr"
path = "src/main.rs"

[dependencies]
clap = { version = "3.0.0-rc.7", features = ["derive"] }
